[project]
name = "llm-bench"
version = "0.1.0"
description = "LLM 추론·서빙 벤치마크 — 단계별 실습 레포"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5.1",
    "transformers>=4.47.0",
    "accelerate>=1.0.0",
    "bitsandbytes>=0.45.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "autoawq>=0.2.9",
    "llama-cpp-python>=0.3.30",
    "hqq>=0.2.8.post1",
    "datasets>=5.0.0",
    "lm-eval>=0.4.12",
    "vllm>=0.8.5.post1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.28",
    "prometheus-fastapi-instrumentator>=7.0.0,<8.0.0",
]

[[tool.uv.index]]
url = "https://abetlen.github.io/llama-cpp-python/whl/cu124"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
